2006-05-27  James R. Van Zandt  <jrv@vanzandt.comcast.net>

	* adjtimex.c (log_times): Permit ntpdate to contact any number of
	time servers.
	(log_times): add -q to ntpdate command line
	(puthackent): with --verbose, display log entry and path to log
	file.
	(valid_system_rate, valid_cmos_rate): in messages, ask about
	/sbin/hwclock rather than the old /sbin/clock.
	(probe_time): If call to adjtimex fails, quit with error message.
	(Need root priv.)  Thus, "adjtimex -r" and "adjtimex -c" fail
	rather than succeeding with bogus results.

2006-05-26  James R. Van Zandt  <jrv@vanzandt.comcast.net>

	* adjtimex.c (log_times): use stat to look for ntpdate in
	/usr/bin, /bin, /usr/sbin and /sbin. Close pipe with pclose
	instead of fclose.

	* adjtimex.8: express PLL time constant in terms of a power of two
	rather than the more obscure 1<<val.

2006-05-25  James R. Van Zandt  <jrv@vanzandt.comcast.net>

	* adjtimex.c (log_times): Eliminate compare_cmos_sys(), call
	cmos_read_time() instead.

2006-05-24  James R. Van Zandt  <jrv@vanzandt.comcast.net>

	* adjtimex.c (review): For both CMOS and system clocks, write
	suggested and current adjustments on a separate line from the
	estimated error in ppm.
	(cmos_read_time): Move the sanity check code (to adjust CMOS time
	by multiples of one hour) and code to read sytem time into this
	function.

2006-05-23  James R. Van Zandt  <jrv@vanzandt.comcast.net>

	* adjtimex.c (compare_cmos_sys): delete code to find UTC time via
	switching TZ (was controlled by ZONESWITCH, which was not #defined).

	* adjtimex.8: -h specifies the host, so it can't also ask for the
	help printout.  -V or --verbose increases verbosity.  Shifting
	CMOS time by up to 13 hours.

2006-05-23  James R. Van Zandt  <jrv at debian.org>

	* adjtimex.c (cmos_read_time): set tm_isdst to -1 to signal that
	summer time information is not available (/dev/rtc doesn't set it)

2006-05-22  James R. Van Zandt  <jrv at debian.org>
