@@ -1,3 +1,8 @@
+2006-10-07  James R. Van Zandt  <jrv@vanzandt.comcast.net>
+
+	* adjtimex.c: don't declare adjtimex syscall (should already be
+	getting the declaration from sys/timex.h)
+
 2006-05-27  James R. Van Zandt  <jrv@vanzandt.comcast.net>
 
 	* adjtimex.c (log_times): Permit ntpdate to contact any number of
